<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="brand">Presence</string>
    <string name="activity">Activity</string>
    <string name="report">Report</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="provider">Provider</string>
    <string name="provider_desc">Host of the API</string>
    <string name="checkin">Check-In</string>
    <string name="checkout">Check-Out</string>
    <string name="incidence">Incidence</string>
    <string name="refresh">Refresh</string>
    <string name="offline">Offline</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End date</string>
    <string name="generate">Generate</string>
    <string name="period">Period</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="identifier">Identifier</string>
    <string name="update">Update</string>
    <string name="total_time">Total time</string>
    <string name="total_checkins">Total checkins</string>
    <string name="total_incidences">Total incidences</string>
    <string name="error_nouuid">There is a problem with your device. Please contact the administrator and reinstall the application</string>
    <string name="error_nowifi">Wifi is disabled. Please enable wifi to continue</string>
    <string name="error_noprovider">The service provider url is not set, please specify it to continue!</string>
    <string name="error_norequest">Request failed!</string>
    <string name="error_nostatus">You are out of range!</string>
    <string name="popup_uuid_title">Device UUID</string>
    <string name="profile_updated">The user profile has been updated!</string>

</resources>