<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Presence"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="true"
    android:orientation="vertical"
    android:padding="15dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/period"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/reportPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="1dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_time"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/reportTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="1dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_checkins"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/reportCheckins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="1dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_incidences"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/reportIncidences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="1dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gray" />

</LinearLayout>