<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Presence"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/Presence"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:padding="15dp"
            android:text="@string/startdate"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <DatePicker
            android:id="@+id/startdate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:padding="15dp"
            android:text="@string/enddate"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <DatePicker
            android:id="@+id/enddate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="15dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/generateReport"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:text="@string/generate" >
        </Button>
    </RelativeLayout>

</RelativeLayout>